--- a/package.json
+++ b/package.json
@@ -4,21 +4,37 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon index.js",
-    "start": "node index.js"
+    "keyPar": "node createKeypair",
+    "start:dev": "set NODE_ENV=development& nodemon --inspect ./src/index.js",
+    "start": "set NODE_ENV=production& node ./src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@meanie/mongoose-to-json": "^2.6.0",
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
+    "google-auth-library": "^8.7.0",
+    "helmet": "^6.0.1",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
+    "mongoose-paginate-v2": "^1.7.1",
+    "mongoose-update-if-current": "^1.4.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.21",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "rotating-file-stream": "^3.1.0",
+    "shortid": "^2.2.16",
     "uuid": "^9.0.0"
   }
 }
