feat(): update user

--- a/src/.env.development
+++ b/src/.env.development
@@ -1,16 +1,12 @@
 PORT=3000 
 MONGODB_HOST=104.236.71.147
 MONGODB_PORT=27071
-MONGODB_DATABASE=cafe
-MONGODB_SESSION=sessions-bg
 MONGODB_USER=pcurich
-MONGODB_PASSWORD=pcurich
+MONGODB_PASSWORD=c0TvQzPCzudi4XFB
 FRONTEND_URL=http://localhost:4200
-DB_CNN_SESSION_NAME=ATLAS-SESSIONS
-DB_CNN_SESSION=mongodb://develop:27017/sessions-bg
-DB_CNN_HOST_NAME=HYPER-V
-DB_CNN_HOST=mongodb://develop:27017/cafecurichdb
-DB_CNN=mongodb+srv://pcurich:pcurich@cluster0.ondhe.mongodb.net
+DB_CNN_SESSION=demoDBSession
+DB_CNN_SESSION_NAME=chrone
+DB_CNN=mongodb+srv://pcurich:c0TvQzPCzudi4XFB@cluster0.ondhe.mongodb.net
 DB_CNN_NAME=demoDB
 JWT_SECRET=Holsdj28397kjHd7@asdyui3897k
 JWT_SECRET_HEADER=Authorization
