--- a/package.json
+++ b/package.json
@@ -14,27 +14,29 @@
   "dependencies": {
     "@meanie/mongoose-to-json": "^2.6.0",
     "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
-    "express-validator": "^6.15.0",
-    "google-auth-library": "^8.7.0",
-    "helmet": "^6.0.1",
+    "express-validator": "^7.0.1",
+    "google-auth-library": "^9.0.0",
+    "helmet": "^7.0.0",
     "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.1",
-    "mongoose-paginate-v2": "^1.7.1",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.2",
+    "mongoose-paginate-v2": "^1.7.31",
     "mongoose-update-if-current": "^1.4.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.21",
+    "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "rotating-file-stream": "^3.1.0",
+    "rotating-file-stream": "^3.1.1",
     "shortid": "^2.2.16",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yargs": "^17.7.2"
   }
 }
