--- a/src/.env.development
+++ b/src/.env.development
@@ -2,11 +2,11 @@ PORT=3000
 MONGODB_HOST=104.236.71.147
 MONGODB_PORT=27071
 MONGODB_USER=pcurich
-MONGODB_PASSWORD=c0TvQzPCzudi4XFB
+MONGODB_PASSWORD=pcurich
 FRONTEND_URL=http://localhost:4200
 DB_CNN_SESSION=demoDBSession
 DB_CNN_SESSION_NAME=chrone
-DB_CNN=mongodb+srv://pcurich:c0TvQzPCzudi4XFB@cluster0.ondhe.mongodb.net
+DB_CNN=mongodb+srv://pcurich:pcurich@cluster0.ondhe.mongodb.net
 DB_CNN_NAME=demoDB
 JWT_SECRET=Holsdj28397kjHd7@asdyui3897k
 JWT_SECRET_HEADER=Authorization
