feat(): update compamy with agents

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "editor.wordWrapColumn": 160,
     "files.autoSave": "afterDelay",
     "editor.bracketPairColorization.independentColorPoolPerBracketType": true,
-    "editor.formatOnPaste": true
+    "editor.formatOnPaste": true,
+    "editor.tabCompletion": "on"
 }   
